bug del header version mobile corregido

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -15,6 +15,10 @@ body {
   }
 }
 
+a {
+  text-decoration: none;
+}
+
 #tsparticles {
   position: fixed;
   height: 100%;
